# myyearwithgit

./: .gitignore
MyYearWithGit.xcodeproj/: project.pbxproj
MyYearWithGit.xcworkspace/xcshareddata/swiftpm/: Package.resolved
MyYearWithGit/App/: main.swift
MyYearWithGit/Data/Analyser/: GitDiff.swift
python-cli/: README.md  pyproject.toml
python-cli/src/: __init__.py  display.py  export.py  git_parser.py  main.py  scanner.py  statistics.py
